# CiBER_seq

./: Pgk1vsHis4  Pgk1vsHis4_mpralm.R  Pgk1vsHis4_raw_to_bc-tab_matrix  README.md  bc-count.py  bc-tabulate.py  cutadapt_Pgk1vsHis4
R_figures/fig1/: max_est_values.r
R_figures/fig2/: cummulative_dist_GO.R  his4_pooled_volc.r  his4_poolvhis4_post3AT.r
R_figures/fig3/: offset_3AT_induction.R
R_figures/fig4/: GO_epistasis_HTS1_RPC31_3AT.r  newest_HTS1vRPC31_GO.r  stacked_barplot_epistasis.r
R_figures/fig5/: cds_volc.r
barcode-assign-8b38f7a/src/: bc_grna.rs  bc_seqs.rs  bc_tabulate.rs
barcode_assign/: Cargo.toml
barcode_assign/src/: bc_collapse.rs  bc_count.rs  bc_frag.rs
barcode_assign/src/barcode_assign/: assign.rs  barcode_group.rs  bc_count.rs  bc_frag.rs  bc_grna.rs  depth.rs  fastq_pair.rs  lib.rs  neighborhood.rs
docs/: .gitignore  10-vectors.md  20-sequencing.md  _config.yml  index.md
docs/_includes/: head.html  sidebar.html
scripts/: .sra_filenames.txt.swp  CiBER-Seq_SRA.txt  gRNA_assign_plus_empty.sh  master.sh  nohup.out  sra_download.sh  sra_download_old.sh  sra_download_v1.sh  sra_filenames.txt
scripts/GO_analysis_files/: GO_bkgnd_enrchmt.r  GO_count.r  GO_count.txt  GO_term_points.r  HTS1vRPC31.r  HTS1vRPC31v3AT.r  HTS1vRPC31vHis4.r  HTS1vRPC31vHis4_GO.r  cds_volc.r  compareHTS1vsHis4pre3AT.r  his4poolvutr.r  new_his4_poolvhis4_post3AT.r  new_his4_poolvhis4_pre3AT.r  retry_GO_term_points.r  temp.r  temp2_volc.r  temp3_volc.r  temp_volc.r  transcription_handcurhis4_pooled.txt  volcanoes.r
scripts/R_mpralm/: HTS1_RPC31_mpralm.r  (+5 more)
(+322 files in other folders)
